[package]
name = "pigeon-backend"
version = "0.1.0"
authors = ["David Cao <david@cao.st>"]
edition = "2018"

license = "MPL-2.0"

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.12"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "pigeon_backend"
path = "src/lib.rs"

[[bin]]
name = "pigeon-backend"
path = "src/bin.rs"
