[package]
name = "pigeon-backend"
version = "0.1.0"
authors = ["David Cao <david@cao.st>"]
edition = "2018"

license = "MPL-2.0"

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel-geography = { version = "0.2", features = ["serde"] }
dotenv = "0.12"
env_logger = "0.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "pigeon_backend"
path = "src/lib.rs"

[[bin]]
name = "pigeon-backend"
path = "src/bin.rs"
